Add slight responsiveness for header font sizes

--- a/src/components/explore-button.sass
+++ b/src/components/explore-button.sass
@@ -139,3 +139,7 @@
 .explore-button.clickable:hover .icon.dna
   background-color: $explore-button-dna-hover-icon-bgcolor
 
+
+.small-app
+  .explore-button
+    font-size: $small-app-font-size-normal
