--- a/src/components/left-nav-panel.sass
+++ b/src/components/left-nav-panel.sass
@@ -59,6 +59,11 @@
     color: $left-nav-footer-color
     background-color: $left-nav-footer-bgcolor
 
+.small-app
+  .left-nav-panel
+    .header
+      font-size: $small-app-font-size-header
+
 
 /* SCROLLBAR */
 /* width */
