--- a/src/components/two-up-display.sass
+++ b/src/components/two-up-display.sass
@@ -165,3 +165,8 @@
 
 .bottom-abutment
   margin-bottom: $two-up-margin
+
+.small-app
+  .two-up-display
+    .header
+      font-size: $small-app-font-size-header
