--- a/src/components/vars.sass
+++ b/src/components/vars.sass
@@ -39,6 +39,9 @@ $font-size-label1: 11px
 $font-size-label2: 10px
 $font-size-label3: 9px
 
+$small-app-font-size-header: 18px
+$small-app-font-size-normal: 14px
+
 //
 // animations
 //
