--- a/src/components/two-up-display.sass
+++ b/src/components/two-up-display.sass
@@ -116,6 +116,9 @@
     border-bottom-right-radius: $component-border-radius
     transition-property: height
     transition-duration: $fade-time
+    color: $color-white
+    font-size: 11px
+
     &.populations
       background-color: $color-simdata-amber
       &.data
@@ -126,8 +129,8 @@
       background-color: $color-simdata-brick
 
     .button-holder
-      width: 120px
-      margin: 0 2px
+      width: 92px
+      margin: 0 5px 0 7px
       border-radius: 13px
       background-color: $color-simdata-amber-light2
       &:hover:not(.disabled):not(.active)
