Fix elements disappearing after scaling

--- a/src/components/charts/line-chart-controls.sass
+++ b/src/components/charts/line-chart-controls.sass
@@ -8,7 +8,7 @@
   margin-right: 4%
   margin-top: 5px
   flex: 0 0 20px
-  transform: translate3d(0px, 0px, 0px);  // needed to keep visibility after scaling
+  transform: translate3d(0px, 0px, 0px)  // needed to keep visibility after scaling
 
   .scrubber
     position: absolute
