--- a/src/components/spaces/populations/populations-container.sass
+++ b/src/components/spaces/populations/populations-container.sass
@@ -12,6 +12,7 @@
   border-style: solid
   border-color: white
   border-width: 2px 0 0 0
+  transform: translate3d(0px, 0px, 0px)  // needed to keep visibility after scaling
 
 .toolbar-row
   display: flex
