--- a/src/components/two-up-display.sass
+++ b/src/components/two-up-display.sass
@@ -148,7 +148,7 @@
       height: 29px
       border-radius: 5px
       background-color: $color-simdata-amber-light2
-      transform: translate3d(0px, 0px, 0px);  // needed to keep visibility after scaling
+      transform: translate3d(0px, 0px, 0px)  // needed to keep visibility after scaling
       &.upper-right
         top: 111px
         right: 17px
