Add styling for fullscreen button for `none` space

--- a/src/components/fullscreen-button.sass
+++ b/src/components/fullscreen-button.sass
@@ -70,6 +70,14 @@
         svg
           fill: white
 
+  &.none
+    .fullscreen-button-border
+      background-color: $color-nav-cinder-light2
+    .fullscreen-button
+      border-color: $color-nav-cinder-dark2
+      svg
+        fill: $color-nav-cinder-dark2
+
   &.fullscreen
     &.populations
       .fullscreen-button
