Fix cell toolbar being overlapped by model in fullscreen

--- a/src/components/spaces/organisms/organisms-container.sass
+++ b/src/components/spaces/organisms/organisms-container.sass
@@ -32,6 +32,7 @@
     border-style: solid
     border-color: white
     border-width: 2px 0 0 0
+    transform: translate3d(0px, 0px, 0px)  // needed to keep visibility after scaling
 
   .organism-description
     text-align: center
