--- a/src/components/authoring.sass
+++ b/src/components/authoring.sass
@@ -43,6 +43,12 @@ form.rjsf
     white-space: normal
     border-bottom: 1px solid #e5e5e5
 
+  & > div > fieldset > div > fieldset > legend
+    font-size: 1.7rem
+    width: 550px
+    padding: 3px
+    border-bottom: 2px solid #bbb
+
   .minor-group legend
     border: none
     font-size: 1.1rem
