Improve anti-flickering scroll solution

--- a/src/components/app.sass
+++ b/src/components/app.sass
@@ -19,6 +19,7 @@
   background-color: white
 
 .app-container
+  overflow: hidden
   display: flex
   flex-direction: column
   transform-origin: 50% 0
