--- a/src/index.sass
+++ b/src/index.sass
@@ -5,4 +5,6 @@ html, body
 body
   font-family: Ubuntu, sans-serif;
   user-select: none
-  overflow: hidden
+
+body>div>svg    // hidden organelle svg
+  position: absolute
