Fix hover label being invisible in fullscreen

--- a/src/components/spaces/organisms/organelle-wrapper.sass
+++ b/src/components/spaces/organisms/organelle-wrapper.sass
@@ -52,5 +52,6 @@
     border: 2px solid #fff
     border-right: none
     border-radius: 0 0 0 5px
+    transform: translate3d(0px, 0px, 0px)  // needed to keep visibility after scaling
 .temp-dropper
   position: absolute
