--- a/src/components/spaces/proteins/amino-acid-slider.sass
+++ b/src/components/spaces/proteins/amino-acid-slider.sass
@@ -1,68 +1,38 @@
-.amino-acid-slider
-  background-color: #333
-  border: 2px solid #777
-  overflow: hidden
-  position: relative
-
-
-  .amino-acids
+.amino-acids
+  .amino-acid-slider
+    overflow: hidden
     position: relative
-    font-family: 'Courier'
-    color: white
-    fill: white
-    /* pointer-events: none */
+    height: 44px
 
-    text-align: left
+    .amino-acids
+      position: relative
+      font-family: 'Courier'
+      color: white
+      fill: white
+      /* pointer-events: none */
 
-    -webkit-touch-callout: none
-    -webkit-user-select: none
-    -khtml-user-select: none
-    -moz-user-select: none
-    -ms-user-select: none
-    user-select: none
+      text-align: left
+
+      -webkit-touch-callout: none
+      -webkit-user-select: none
+      -khtml-user-select: none
+      -moz-user-select: none
+      -ms-user-select: none
+      user-select: none
 
     svg
-      padding-top: 10px
+      .focusBox
+        fill: #eb7d40
+        stroke: #973b00
+        stroke-width: 2
+      .focusTriangle
+        fill: #973b00
+        stroke: #973b00
+        stroke-width: 0
+        &.mark
+          fill: #ffff00
 
-
-  .highlight
-    color: yellow
-
-
-  &:after
-    content: ""
-    width: 100%
-    height: 100%
-    position: absolute
-    top: 0
-    right: 0
-    pointer-events: none
-
-
-  &.fade-right:after
-    background: -moz-linear-gradient(left, rgba(0,0,0,0) 0%, rgba(0,0,0,0) 85%, rgba(0,0,0,0.8) 97%, rgba(0,0,0,0.8) 100%)
-    background: -webkit-linear-gradient(left, rgba(0,0,0,0) 0%,rgba(0,0,0,0) 85%,rgba(0,0,0,0.8) 97%,rgba(0,0,0,0.8) 100%)
-    background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(0,0,0,0) 85%,rgba(0,0,0,0.8) 97%,rgba(0,0,0,0.8) 100%)
-
-
-  &.fade-left:after
-    background: -moz-linear-gradient(left, rgba(0,0,0,0.8) 0%, rgba(0,0,0,0.8) 3%, rgba(0,0,0,0) 15%, rgba(0,0,0,0) 100%)
-    background: -webkit-linear-gradient(left, rgba(0,0,0,0.8) 0%,rgba(0,0,0,0.8) 3%,rgba(0,0,0,0) 15%,rgba(0,0,0,0) 100%)
-    background: linear-gradient(to right, rgba(0,0,0,0.8) 0%,rgba(0,0,0,0.8) 3%,rgba(0,0,0,0) 15%,rgba(0,0,0,0) 100%)
-
-
-  &.fade-right.fade-left:after
-    background: -moz-linear-gradient(left, rgba(0,0,0,0.8) 0%, rgba(0,0,0,0.8) 3%, rgba(0,0,0,0) 15%, rgba(0,0,0,0) 85%, rgba(0,0,0,0.8) 97%, rgba(0,0,0,0.8) 100%)
-    background: -webkit-linear-gradient(left, rgba(0,0,0,0.8) 0%,rgba(0,0,0,0.8) 3%,rgba(0,0,0,0) 15%,rgba(0,0,0,0) 85%,rgba(0,0,0,0.8) 97%,rgba(0,0,0,0.8) 100%)
-    background: linear-gradient(to right, rgba(0,0,0,0.8) 0%,rgba(0,0,0,0.8) 3%,rgba(0,0,0,0) 15%,rgba(0,0,0,0) 85%,rgba(0,0,0,0.8) 97%,rgba(0,0,0,0.8) 100%)
-
-
-  .selection
-    position: absolute
-    left: 0
-    top: 3%
-    height: 85%
-    width: 70px
-    border: 1px solid rgb(212, 212, 0)
-    background-color: rgba(212, 212, 0, 0.3)
-    cursor: pointer
+      .codon
+        fill: rgb(109, 43, 0)
+        font-weight: 400
+        font-family: Ubuntu, sans-serif
