Update checkbox text styles

--- a/src/components/two-up-display.sass
+++ b/src/components/two-up-display.sass
@@ -256,6 +256,14 @@
     .check-container:active input:checked ~ .checkmark
       background-color: $color-simdata-carrot-light2
 
+    .check-container
+      .label-holder .label
+        color: #5C2300
+
+    .check-container.checked
+      .label-holder .label
+        color: white
+
 
 .left-abutment
   margin-left: $two-up-margin
