--- a/src/components/two-up-display.sass
+++ b/src/components/two-up-display.sass
@@ -268,6 +268,10 @@
 .left-abutment
   margin-left: $two-up-margin
 
+  .header .title
+    position: relative;
+    left: -43px;
+
 .right-abutment
   margin-right: $two-up-margin
 
