Chromosome pairing/unpairing, update controls

--- a/src/components/spaces/organisms/organisms-container.sass
+++ b/src/components/spaces/organisms/organisms-container.sass
@@ -122,6 +122,18 @@
       .icon
         fill: $color-white
 
+  .organism-check
+    display: flex
+    align-items: center
+    width: 63px
+    height: 20px
+    margin: 24px 0 0 10px
+    color: $color-simdata-carrot-dark2
+    font-size: 12px
+
+    &.disabled
+      opacity: .5
+
 /* -fail- */
 @-webkit-keyframes fade
   from {opacity: 0}
