--- a/src/components/spaces/organisms/organisms-container.sass
+++ b/src/components/spaces/organisms/organisms-container.sass
@@ -134,6 +134,11 @@
     &.disabled
       opacity: .5
 
+  .cell-zoom-panel
+    &.inspect
+      svg
+        cursor: url('../../../assets/cell-zoom/inspect-proteins-cursor.png') 0 0, auto
+
 /* -fail- */
 @-webkit-keyframes fade
   from {opacity: 0}
