Fix overlapping title blocking mouse events

--- a/src/components/two-up-display.sass
+++ b/src/components/two-up-display.sass
@@ -271,6 +271,7 @@
   .header .title
     position: relative;
     left: -43px;
+    pointer-events: none
 
 .right-abutment
   margin-right: $two-up-margin
