Fix cypress test failure

--- a/src/components/two-up-display.sass
+++ b/src/components/two-up-display.sass
@@ -269,9 +269,10 @@
   margin-left: $two-up-margin
 
   .header .title
-    position: relative;
-    left: -43px;
-    pointer-events: none
+    position: relative
+    left: 15px
+    width: 200px
+    flex-grow: 0
 
 .right-abutment
   margin-right: $two-up-margin
