Add breed cursor

--- a/src/components/spaces/breeding/nesting-container.sass
+++ b/src/components/spaces/breeding/nesting-container.sass
@@ -6,6 +6,8 @@
     cursor: url('../../../assets/collect-cursor.png') 27 20, auto
   &.inspect
     cursor: url('../../../assets/inspect-cursor-nests.png') 6 5, auto
+  &.breed
+    cursor: url('../../../assets/breed-cursor.png') 6 3, auto
 
 .nesting-toolbar
   height: 100px
