Add breeding data right panel
[#170708439]

--- a/src/components/vars.sass
+++ b/src/components/vars.sass
@@ -55,6 +55,8 @@ $color-white: #ffffff
 $color-key-blue: #0099ff
 $color-key-red: #de444b
 $color-key-yellow: #ffff00
+$color-chart-red: #FF5959
+$color-chart-yellow: #FEFF59
 $color-nav-cinder-dark4: #111416
 $color-nav-cinder-dark3: #2c3840
 $color-nav-cinder-dark2: #434e56
