--- a/src/components/colors.scss
+++ b/src/components/colors.scss
@@ -18,4 +18,10 @@
   chartColor8:  $color4;
   chartColor9:  $color5;
   chartColor10: $color6;
+
+  colorChartRed: $color-chart-red;
+  colorChartYellow: $color-chart-yellow;
+  colorDataMouseBrownLightRep: $color-data-mousebrown-light-rep;
+  colorDataMouseBrownMediumRep: $color-data-mousebrown-medium-rep;
+  colorDataMouseBrownDarkRep: $color-data-mousebrown-dark-rep;
 }
