--- a/src/components/spaces/breeding/nest-pair.sass
+++ b/src/components/spaces/breeding/nest-pair.sass
@@ -5,11 +5,11 @@
   width: 170px
   height: 90px
   &:hover .pair-label.show
-    opacity: 100%
+    opacity: 1
   &:hover .nest-pair-background-hover.show
-    opacity: 100%
+    opacity: 1
   &:hover .nest-inspect.show
-    opacity: 75%
+    opacity: .75
   &.left-top
     top: 30px
   &.left-middle
@@ -62,7 +62,7 @@
     height: 80px
     width: 150px
     background-color: $color-simdata-brick-light1
-    opacity: 0%
+    opacity: 0
     border-radius: 40px
     transition-duration: .25s
     &.left-top
@@ -93,7 +93,7 @@
   .mouse
     position: absolute
     &:hover .selection-stack.show
-      opacity: 100%
+      opacity: 1
     &.left
       &.left-top
         top: 0px
@@ -145,12 +145,12 @@
       top: 8px
       left: -18px
       &.flip
-        transform: scaleX(-1)
         left: 4px
+        transform: translate3d(0px, 0px, 0px) scaleX(-1)
       &.outline
         opacity: 0
       &.show
-        opacity: 100%
+        opacity: 1
     .hetero-stack
       position: absolute
       height: 80px
@@ -159,7 +159,7 @@
       opacity: 0
       transition-duration: .25s
       &.show
-        opacity: 100%
+        opacity: 1
     .sex-stack
       position: absolute
       height: 80px
@@ -168,7 +168,7 @@
       opacity: 0
       transition-duration: .25s
       &.show
-        opacity: 100%
+        opacity: 1
   .pair-label
     position: absolute
     font-size: 14px
