--- a/src/components/two-up-display.sass
+++ b/src/components/two-up-display.sass
@@ -28,6 +28,8 @@
     font-family: $font-stack
     color: $color-simdata-amber-dark2
     transition-duration: $fade-time
+    &.breeding
+      color: $color-simdata-brick-dark2
     &:hover:not(.disabled)
       cursor: pointer
     &.disabled
@@ -127,19 +129,29 @@
       background-color: $color-simdata-carrot
     &.breeding
       background-color: $color-simdata-brick
+      &.data
+        height: 45px
 
     .button-holder
       width: 92px
       margin: 0 5px 0 7px
       border-radius: 13px
       background-color: $color-simdata-amber-light2
+      &.breeding
+        background-color: $color-simdata-brick-light2
       &:hover:not(.disabled):not(.active)
         background-color: $color-simdata-amber-light1
+        &.breeding
+          background-color: $color-simdata-brick-light1
       &:active:not(.disabled), &.active
         background-color: $color-simdata-amber-dark1
         color: $color-white
+        &.breeding
+          background-color: $color-simdata-brick-dark1
         &:hover
-          background-color: $color-simdata-amber-dark1-5
+          background-color: $color-simdata-amber-dark1
+          &.breeding
+            background-color: $color-simdata-brick-dark1
 
   .float-buttons
     .button-holder
