Add gamete and nest icons
[#170706724]

--- a/src/components/spaces/breeding/breeding-container.sass
+++ b/src/components/spaces/breeding/breeding-container.sass
@@ -100,19 +100,23 @@
         height: 28px
         margin-right: 1px
         border-radius: $component-border-radius * 3 0 0 $component-border-radius * 3
-        .icon
-          width: 12px
-          height: 12px
-          margin: 0
+        .label
+          position: absolute
+          top: 30px
+          left: 150px
       &.right
         width: 42px
         height: 28px
         margin-left: 1px
         border-radius: 0 $component-border-radius * 3 $component-border-radius * 3 0
         .icon
-          width: 12px
-          height: 12px
+          width: 42px
+          height: 16px
           margin: 0
+        .label
+          position: absolute
+          top: 30px
+          left: 186px
       .label
         font-size: 10px
         margin: 0
