--- a/src/components/spaces/breeding/breeding-view.sass
+++ b/src/components/spaces/breeding/breeding-view.sass
@@ -1,77 +1,70 @@
 @import "../../vars"
 
-.breeding-container
+.breeding-view
   width: 100%
-  display: grid
-  grid-template-columns: [mother] 30% [center] 1fr [father] 30%
-  grid-template-rows: [top] 440px [bottom] 1fr
+  height: 433px
+  display: flex
+  flex-direction: column
+  justify-content: space-between
+  align-items: center
+  font-size: $font-size-label1
+  font-family: $font-stack
+  color: $color-simdata-brick-dark2
 
-  div
+  .parents
     display: flex
-    flex-direction: column
+    width: 100%
+    justify-content: space-around
     align-items: center
-    justify-content: center
+    font-size: 1.5em
+    padding-top: 5px
 
-  .parent
-    margin: 3px
-    background-color: $color-simdata-brick-light3
-    border: 2px solid $color-simdata-brick-light1
-    border-radius: 10px
-    grid-row-start: top
+    .parent
+      display: flex
+      flex-direction: column
+      align-items: center
+      &.mother
+        padding-left: 20px
+      &.father
+        padding-right: 20px
+      .parent-image
+        display: flex
+        justify-content: center
+        align-items: center
+        height: 115px
+        width: 115px
+        border-radius: 50%
+        background-color: $color-simdata-brick-light3
+        margin-top: 5px
 
-  .mother
-    grid-column-start: mother
-
-  .father
-    grid-column-start: father
-
-  .breed-button
-    grid-column-start: center
-    grid-row-start: top
-
-    &.gametes
-      padding-top: 10px
-      justify-content: start
-
-  .litter
-    grid-column-start: mother
-    grid-column-end: span 3
-    grid-row-start: bottom
-    height: 85px
-    margin: 3px
-    border: 2px solid black
-    border-radius: 10px
-    flex-direction: row
-    overflow: hidden
-
-  .gamete-container
-    grid-column-start: center
-    grid-row-start: top
-    display: flex
-    flex-direction: row
-    justify-content: space-between
-    align-items: start
-    padding-top: 165px
-    padding-left: 20px
-    padding-right: 20px
-
+    .nesting-button.breed-button
+      color: $color-nav-shamrock-dark2
+      background-color: $color-nav-shamrock-light2
+      height: 70px
+      width: 73px
+      border: 2px solid white
+      font-size: 1.1em
+      &:hover
+        background-color: $color-nav-shamrock-light1
+      &:active
+        background-color: $color-nav-shamrock-dark1
+        color: white
+        .icon
+          fill: white
+      .icon
+        width: 70px
+        height: 45px
+        fill: $color-nav-shamrock-dark1
 
   .offspring
-    grid-column-start: center
-    grid-row-start: top
-    padding-top: 42px
+    width: 100%
+    height: 200px
+    display: flex
+    justify-content: space-around
 
-
-  .button-holder
-    width: 120px
-    margin: 0 2px
-    border-radius: 13px
-    background-color: $color-simdata-brick-light1
-    color: $color-white
-    font-size: 15px
-    &:hover:not(.disabled):not(.active)
-      background-color: $color-simdata-brick
-    &:active:not(.disabled), &.active
-      background-color: $color-simdata-brick-dark1
-      &:hover
-        background-color: $color-simdata-brick-dark2
+    .litters
+      width: 70%
+      height: 93%
+      background-color: $color-simdata-brick-light3
+      border: 2px solid white
+      border-radius: 5px
