Show real litter data in piecharts; update hasBred behavior

--- a/src/components/spaces/breeding/breeding-data-nest-panel.sass
+++ b/src/components/spaces/breeding/breeding-data-nest-panel.sass
@@ -22,9 +22,11 @@
       &.current
         background-color: $color-simdata-brick-dark1
         border-width: 0
+        margin: 8px
       &.active
         background-color: $color-simdata-brick-light2
         border-width: 0
+        margin: 8px
         cursor: pointer
         &:hover
           background-color: $color-simdata-brick-light1
