--- a/src/components/spaces/breeding/breeding-view.sass
+++ b/src/components/spaces/breeding/breeding-view.sass
@@ -16,67 +16,101 @@
     width: 100%
     justify-content: space-around
     align-items: center
-    font-size: 1.5em
-    padding-top: 5px
+    font-size: 14px
+    font-weight: 500
+    padding-top: 8px
+
+    .parent-label
+      position: absolute
+      top: 20px
+      left: 6px
 
     .parent
       display: flex
       flex-direction: column
       align-items: center
       &.mother
-        padding-left: 20px
+        padding-left: 61px
       &.father
-        padding-right: 20px
+        padding-right: 61px
       .parent-image
         display: flex
         justify-content: center
         align-items: center
-        height: 115px
-        width: 115px
+        height: 94px
+        width: 94px
         border-radius: 50%
         background-color: $color-simdata-brick-light3
         margin-top: 5px
 
-    .nesting-button.breed-button
-      color: $color-nav-shamrock-dark2
-      background-color: $color-nav-shamrock-light2
-      height: 70px
-      width: 73px
-      border: 2px solid white
-      font-size: 1.1em
-      &:hover
-        background-color: $color-nav-shamrock-light1
-      &:active
-        background-color: $color-nav-shamrock-dark1
-        color: white
+    .breed-button-container
+      padding-top: 18px
+
+      .nesting-button.breed-button
+        color: $color-nav-shamrock-dark2
+        background-color: $color-nav-shamrock-light2
+        height: 60px
+        width: 63px
+        border: 2px solid white
+        font-size: 16px
+        font-weight: 500
+        &:hover
+          background-color: $color-nav-shamrock-light1
+        &:active
+          background-color: $color-nav-shamrock-dark1
+          color: white
+          .icon
+            fill: white
         .icon
-          fill: white
-      .icon
-        width: 70px
-        height: 45px
-        fill: $color-nav-shamrock-dark1
+          width: 53px
+          height: 35px
+          fill: $color-nav-shamrock-dark1
+        .label
+          margin-top: -2px
+          margin-bottom: 1px
 
   .offspring
+    position: relative
     width: 100%
-    height: 200px
+    height: 235px
     display: flex
     justify-content: space-around
+    opacity: 1
+    transition: opacity 0.5s
+    &.hide
+      opacity: 0
+
+    .litter-number, .total-offspring
+      position: absolute
+      width: 40px
+      text-align: center
+    .litter-number
+      top: 10px
+      left: 6px
+      font-size: 14px
+      font-weight: 500
+    .total-offspring
+      position: absolute
+      top: 160px
+      left: 5px
+      font-size: 10px
+      font-weight: 400
 
     .litters
-      width: 70%
-      height: 93%
-      background-color: $color-simdata-brick-light3
+      width: 300px
+      height: 225px
+      background-color: white
       border: 2px solid white
       border-radius: 5px
       overflow-y: scroll
 
-      &:before
+      &:before          // allows appearance animation
         content: ' '
 
       .litter
         display: flex
         justify-content: center
-        margin: 20px 0
+        margin: 32px 0 -11px 0
         transition: all 0.5s
         animation: push-down 0.8s ease
 
@@ -86,6 +120,39 @@
           margin-top: 10px
           z-index: 2
 
+    .focus-overlay
+      position: absolute
+      top: 2px
+      left: 58px
+      width: 293px
+      height: 218px
+      z-index: 3
+      pointer-events: none
+
+      &>div
+        background-color: #ffe5e590
+        width: 100%
+      .focus-overlay-top
+        height: 8px
+      .focus-overlay-bottom
+        height: 114px
+      .focus-window
+        width: 303px
+        height: 102px
+        margin-left: -5px
+        background-color: transparent
+        border: 2px solid $color-simdata-brick-dark2
+        border-radius: 5px
+        &:before
+          content: ' '
+          position: absolute
+          left: -11px
+          top: 20px
+          width: 0
+          height: 0
+          border-style: solid
+          border-width: 5px 6px 5px 0
+          border-color: transparent $color-simdata-brick-dark2 transparent transparent
 @keyframes push-down
   0%
     opacity: -1
