--- a/src/components/spaces/breeding/breeding-inspect.sass
+++ b/src/components/spaces/breeding/breeding-inspect.sass
@@ -10,6 +10,7 @@
     margin-top: 15px
     text-align: center
     font-size: 16px
+    font-weight: 500
   .pair-container
     display: flex
     flex-direction: row
@@ -36,6 +37,7 @@
       .mouse-label
         color: $color-simdata-brick-dark3
         font-size: 16px
+        font-weight: 500
         margin: 10px
       .info-row
         display: flex
@@ -45,7 +47,9 @@
         .info-type
           color: $color-simdata-brick-dark3
           font-size: 14px
+          font-weight: 500
           margin-right: 5px
         .info-data
           color: $color-nav-cinder-dark2
           font-size: 14px
+          font-weight: 400
