--- a/src/components/spaces/breeding/nest-pair.sass
+++ b/src/components/spaces/breeding/nest-pair.sass
@@ -135,6 +135,7 @@
   .pair-label
     position: absolute
     font-size: 14px
+    font-weight: 500
     color: $color-black
     opacity: 0
     transition-duration: .25s
