--- a/src/components/spaces/breeding/breeding-view.sass
+++ b/src/components/spaces/breeding/breeding-view.sass
@@ -46,7 +46,7 @@
     .breed-button-container
       padding-top: 18px
 
-      .nesting-button.breed-button
+      .breeding-button.breed-button
         color: $color-nav-shamrock-dark2
         background-color: $color-nav-shamrock-light2
         height: 60px
