--- a/src/components/spaces/breeding/breeding-data-nest-panel.sass
+++ b/src/components/spaces/breeding/breeding-data-nest-panel.sass
@@ -63,7 +63,8 @@
       border-radius: 50%
   .pie-label
     font-size: 14px
-    font-color: #434E56
+    color: #434E56
     text-align: right
     margin-right: 20px
     margin-top: 6px
+    height: 20px
