--- a/src/components/spaces/breeding/breeding-view.sass
+++ b/src/components/spaces/breeding/breeding-view.sass
@@ -80,7 +80,7 @@
     &.hide
       opacity: 0
 
-    .litter-number, .total-offspring
+    .litter-number, .total-offspring, .reset-button-container
       position: absolute
       width: 40px
       text-align: center
@@ -90,11 +90,29 @@
       font-size: 14px
       font-weight: 500
     .total-offspring
-      position: absolute
-      top: 160px
+      top: 155px
       left: 5px
       font-size: 10px
       font-weight: 400
+    .reset-button-container
+      top: 190px
+      left: 5px
+      .reset-button
+        font-size: 8px
+        background-color: $color-simdata-brick-light3
+        height: unset
+        width: unset
+        padding: 2px 6px 0
+        margin: 0
+        border: 2px solid white
+        border-radius: 3px
+        &:hover
+          background-color: $color-simdata-brick-light2
+        &:active
+          background-color: $color-simdata-brick-light1
+        .icon
+          width: 27px
+          height: 20px
 
     .litters
       width: 300px
