--- a/src/components/spaces/breeding/breeding-view.sass
+++ b/src/components/spaces/breeding/breeding-view.sass
@@ -175,8 +175,28 @@
 
     .litter-scroll
       position: absolute
+      top: 15px
       right: 20px
-      height: 225px
+      height: 210px
+      opacity: 1
+      transition: opacity 0.25s
+      &.hide
+        opacity: 0
+
+      .rc-slider-rail
+        background-color: $color-simdata-brick
+      .rc-slider-track
+        background-color: $color-simdata-brick-light1
+      .rc-slider-handle
+        transform: translateY(-10px) translateX(-2px) !important
+        border-color: white
+        background-color: $color-simdata-brick-light2
+        &:hover
+          background-color: $color-simdata-brick-light1
+        &:active
+          background-color: $color-simdata-brick-dark1
+        &:focus
+          box-shadow: none
 
 @keyframes push-down
   0%
