Add overflow hidden to body tag to prevent bounce

--- a/src/index.sass
+++ b/src/index.sass
@@ -5,6 +5,7 @@ html, body
 body
   font-family: Ubuntu, sans-serif;
   user-select: none
+  overflow: hidden
 
 body>div>svg    // hidden organelle svg
   position: absolute
