Adjust icon display to support hover states

--- a/src/components/spaces/breeding/breeding-view.sass
+++ b/src/components/spaces/breeding/breeding-view.sass
@@ -79,6 +79,15 @@
             width: 16px
             height: 16px
             margin-bottom: 2px
+            transition-duration: $fade-time
+            &.egg
+              background-image: url("../../../assets/icons/egg.svg")
+              &:hover
+                background-image: url("../../../assets/icons/egg-hi.svg")
+            &.sperm
+              background-image: url("../../../assets/icons/sperm.svg")
+              &:hover
+                background-image: url("../../../assets/icons/sperm-hi.svg")
 
     .breed-button-container
       padding-top: 30px
