--- a/src/components/app.sass
+++ b/src/components/app.sass
@@ -14,6 +14,8 @@
 
   &.authoring
     position: initial
+    height: 100vh
+    overflow: scroll
 
 .outer-scale-wrapper
   background-color: white
