Update UI to match UI spec

--- a/src/components/spaces/breeding/breeding-container.sass
+++ b/src/components/spaces/breeding/breeding-container.sass
@@ -30,6 +30,7 @@
   justify-content: center
   &.align-left
     justify-content: left
+    left-margin: 6px
 
 .breeding-checkbox
   height: 20px
@@ -92,7 +93,7 @@
 
   .inner-box
     background-color: $color-simdata-brick-light2
-    border-radius: $component-border-radius * 3
+    border-radius: 14px
     height: 28px
     width: 54px
     &.inner-button
@@ -106,7 +107,7 @@
     &.left
       height: 28px
       margin-right: 1px
-      border-radius: $component-border-radius * 3 0 0 $component-border-radius * 3
+      border-radius: 14px 0 0 14px
       .label
         position: absolute
         top: 30px
@@ -114,7 +115,7 @@
     &.right
       height: 28px
       margin-left: 1px
-      border-radius: 0 $component-border-radius * 3 $component-border-radius * 3 0
+      border-radius: 0 14px 14px 0
       .icon
         width: 42px
         height: 16px
