--- a/src/components/spaces/breeding/breeding-data.sass
+++ b/src/components/spaces/breeding/breeding-data.sass
@@ -4,6 +4,7 @@
   .data-title
     color: #434E56
     font-size: 14px
+    font-weight: 400
     width: 100%
     text-align: center
     margin-top: 12px
@@ -11,7 +12,7 @@
     height: 10px
   .nest-pair-container
     display: grid
-    grid-template-columns: 200px 200px
+    grid-template-columns: 207px 207px
     grid-gap: 0px
     height: 405px
   .data-legend
