Add gamete hover effects in breeding view

--- a/src/components/colors.scss
+++ b/src/components/colors.scss
@@ -24,4 +24,6 @@
   colorDataMouseBrownLightRep: $color-data-mousebrown-light-rep;
   colorDataMouseBrownMediumRep: $color-data-mousebrown-medium-rep;
   colorDataMouseBrownDarkRep: $color-data-mousebrown-dark-rep;
+
+  gameteArrowColor: $color-nav-shamrock-dark1;
 }
